# path2dream_processors

./: .bumpversion.cfg  .env_template  .gitattributes  GITHUB_SECRETS_SETUP.md  README.md  demo_async.py  pyproject.toml
.github/workflows/: ci_cd.yml
src/path2dream_processors/: file_parser.py  summary_processor.py
tests/: test_file_parser.py
